[project]
name = "local-llm-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Kanehira", email = "shinichi.kanehira@gmail.com" }
]
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "ollama>=0.2.1",
    "pillow>=10.3.0",
    "langchain>=0.3.15",
    "langchain-ollama>=0.2.2",
    "openai>=1.60.1",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.2",
    "jupyterlab-code-formatter>=2.2.1",
    "ruff>=0.4.9",
    "ipython>=8.25.0",
    "ipywidgets>=8.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_llm_tools"]

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # mccabe
    "C",
    # isrot
    "I",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # Pylint 
    # "PL",
]
ignore = [
    "E203",
    "D211",  # Conflict D203
    "D212",  # Conflict D213
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
